@@ -2,6 +2,7 @@
 	- library code for async in libunbound/unbound.c.
 	- fix link testbound.
 	- fixup exit bug in mini_event.
+	- background worker query enter and result functions.
 
 21 January 2008: Wouter
 	- libworker work, netevent raw commpoints, write_msg, serialize.
